--- a/cmd/payment.html
+++ b/cmd/payment.html
@@ -40,7 +40,7 @@
         "key": "rzp_test_20Ononv4C6RUHh", // Enter the Key ID generated from the Dashboard
         "amount": "{{.total}}", // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
         "currency": "INR",
-        "name": "Electronic Store Test",
+        "name": "Job-Portal-Payment",
         "description": "Test Transaction",
         "image": "https://example.com/your_logo",
         "order_id": "{{.orderid}}", // This is a sample Order ID. Pass the `id` obtained in the response of Step 1
