small change in redirections

--- a/cmd/payment.html
+++ b/cmd/payment.html
@@ -86,7 +86,7 @@
             success: (response) => {
                 console.log(response)
                 if (response.data){
-                    location.href = 'http://apigateway:8080/payment/verified'
+                    location.href = '/payment/verified'
                 }
             }
         })
