--- a/cmd/payment.html
+++ b/cmd/payment.html
@@ -79,14 +79,14 @@
         $.ajax({
 
             //passes details as url params
-            url: `/payment/verify?user_id=${userid}&payment_ref=${res.razorpay_payment_id}&order_id=${orderData}
+            url: `pcforu.online/payment/verify?user_id=${userid}&payment_ref=${res.razorpay_payment_id}&order_id=${orderData}
       &signature=${res.razorpay_signature}&id=${orderid}&total=${total}&plan_id=${planId}`,
             method: 'GET',
 
             success: (response) => {
                 console.log(response)
                 if (response.data){
-                    location.href = '/payment/verified'
+                    location.href = 'pcforu.online/payment/verified'
                 }
             }
         })
